# llmcost

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: pricing.md
llmcost/: cli.py
llmcost/pricing/: cache.py  cli.py  config.py  currency.py  loader.py  models.py
llmcost/pricing/data/: arena_scores.json  blacklist.yaml  cache.json  overrides.yaml
llmcost/pricing/display/: markdown.py  table.py
llmcost/pricing/filters/: arena.py  blacklist.py  pipeline.py
llmcost/pricing/sources/: arena_scores.py  base.py  dashscope.py  kimi.py  minimax.py  openrouter.py  zhipu.py
llmcost/pricing/tests/: test_cache.py  test_currency.py  test_display.py  test_filters.py  test_models.py  test_openrouter.py
llmcost/recommender/: display.py  engine.py  wizard.py
llmcost/recommender/tests/: test_display.py  test_engine.py  test_wizard.py
